--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,7 @@
 }
 body{
 	text-align: center;
-	background-image: url(fondo.jpg);
+	background-image: url(fondo3.jpg);
 }
 #cont{
 	background-image: url(fondo2.jpg);
